# McEA

./: .gitignore  CMakeLists.txt  README.md  a.out  dtlz.cu  dtlz.cuh  makefile  mcea.cu  util.cu  util.h
analysis/: bestPF.py  experiment.sh  out.py  plot_scatter3d.py  run_all.sh  run_nsgaii.sh  shrink_reference_front.py
analysis/compareAlg/: NewNSGAIIRunner.java  NewSPEA2Runner.java  RealUniformMutation.java  SPEA2StoppingByTime.java
analysis/compareAlg/config/gen10/: Constants.java
analysis/compareAlg/config/gen20/: Constants.java
analysis/experiment/: VD_res_mcea_alg.txt  anova_pval_mcea_alg.txt  experiment.sh  mean.txt  normality.txt  run_all.sh  run_bin.sh  run_nsgaii.sh  run_spea2.sh  tukey_pval_mcea_alg.txt  variance.txt
analysis/preprocess/: bestPF.py  shrink_reference_front_DTLZ2.py  shrink_reference_front_DTLZ5_6.py
analysis/statistic/: analysis.R
analysis/visualization/: plot_scatter3d.py
compareAlg/: DoubleNPointCrossover.java  runNSGAII.sh
compareAlg/config/gen100/: Constants.java
compareAlg/config/gen50/: Constants.java
compareAlg/const1/: Constants.java
cpu/: CMakeLists.txt  config.h  dtlz  dtlz.cpp  dtlz.h  makefile  mcea.cpp  mcea_cpu  util.cpp  util.h
cpu/Makefiles/: gen100.mk  gen1000.mk
cpu/config/: gen1000.cmake
data/solutions_dtlz/: DTLZ1.3D.pf  DTLZ2.3D.pf  DTLZ3.3D.pf  DTLZ4.3D.pf  DTLZ5.3D.pf  DTLZ6.3D.pf  DTLZ7.3D.pf
doc/: Doxyfile_cpu  Doxyfile_gpu  build_docs.sh
doc/html/: dtlz_8cu.html  dtlz_8cu__incl.md5  error_8h_source.html  globals.html  globals_func.html  graph_legend.html  mcea_8cu.html  mcea_8cu__incl.map  mcea_8cu__incl.md5  util_8cu.html  util_8cu__incl.map  util_8cu__incl.md5
doc/html/search/: all_1.js  all_3.js  files_1.js  functions_1.js  functions_3.js  functions_4.js  searchdata.js
doc/latex/: dtlz_8cu.tex  files.tex  mcea_8cu.tex  mcea_8cu__incl.md5  util_8cu.tex  util_8cu__incl.md5
gpu/: CMakeLists.txt  Doxyfile  config.h  dtlz.cu  dtlz.cuh  get_cuda_sm.sh  makefile  mcea.cu  mcea_async  mcea_async.cu  mcea_sync  mcea_sync.cu  util.cu  util.h
gpu/config/: gen10.cmake  gen100.cmake  gen1000.cmake
gpu/doc/html/: dtlz_8cu__incl.map  files.html  globals.html  globals_func.html  index.html  mcea_8cu.html  mcea_8cu__incl.md5  md_README.html  pages.html  util_8h_source.html
gpu/doc/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  files_0.js  functions_0.js  functions_2.js  pages_0.js
gpu/doc/latex/: dtlz_8cu__incl.md5  md_README.tex  refman.tex
src/config/: gen10.cmake  gen1000.cmake
src/cpu/: CMakeLists.txt  config.h  dtlz.cpp  dtlz.h  makefile.old  mcea.cpp  util.cpp
src/cpu/Makefiles/: gen10.mk  gen10000.mk
src/cpu/config/: gen100.cmake  gen1000.cmake
src/gpu/: CMakeLists.txt  config.h  dtlz.cu  dtlz.cuh  error.h  get_cuda_sm.sh  mcea_async.cu  mcea_sync.cu  util.cu  util.cuh  util.h  weighting.cu  weighting.cuh
src/gpu/config/: gen10.cmake  gen100.cmake  gen10000.cmake  time5.cmake
src/test/: CMakeLists.txt  test_dtlz1.cpp  test_dtlz2.cpp  test_dtlz3.cpp  test_dtlz4.cpp  test_dtlz5.cpp  test_dtlz6.cpp  test_dtlz7.cpp  test_neighbor.cpp  test_neighbor_10.cpp  test_neighbor_r3.cpp  test_paramsum.cpp  test_random.cpp  test_weighting.cpp
src/util/: config.h  dtlz.cpp  dtlz.cu  dtlz.cuh  dtlz.h  error.h  neighbor.cpp  neighbor.cu  neighbor.cuh  neighbor.h  output.cpp  output.cu  output.cuh  output.h  random.cu  random.cuh  random.h  weighting.cpp  weighting.cu  weighting.cuh  weighting.h
test/: index_test  index_test.c
